FEAT: Develop new Header

--- a/styles/sass/Main.scss
+++ b/styles/sass/Main.scss
@@ -1,5 +1,6 @@
 @forward 'abstracts';
 @forward 'base';
+@forward 'components';
 @forward 'pages';
 @forward 'utilities';
 
@@ -7,15 +8,16 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 a {
-  color: inherit;
+  color: unset;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+  background: #0E1630;
 }
+
