--- a/styles/css/Main.css
+++ b/styles/css/Main.css
@@ -1,6 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 .container {
   max-width: 1200px;
   width: 100%;
+}
+
+section {
+  padding-top: 150px;
+}
+
+footer {
+  padding-bottom: 20px;
+  padding-top: 60px;
+  border-top: 1px solid #171f38;
 }
 
 /* Box sizing rules */
@@ -83,8 +94,13 @@ select {
     scroll-behavior: auto !important;
   }
 }
+h1, h2, h3, h4, h5, h6 {
+  color: #FFFFFF;
+}
+
 h1 {
-  font-family: "Open Sans";
+  font-family: "Quicksand", sans-serif;
+  scroll-behavior: smooth;
   font-style: normal;
   font-weight: bold;
   font-size: 48px;
@@ -93,16 +109,18 @@ h1 {
 }
 
 h2 {
-  font-family: "Open Sans";
+  font-family: "Quicksand", sans-serif;
+  scroll-behavior: smooth;
   font-style: normal;
   font-weight: 600;
-  font-size: 36px;
+  font-size: 2.5rem;
   line-height: 54px;
   letter-spacing: 0.005em;
 }
 
 h3 {
-  font-family: "Open Sans";
+  font-family: "Quicksand", sans-serif;
+  scroll-behavior: smooth;
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
@@ -111,7 +129,8 @@ h3 {
 }
 
 .Subtitle {
-  font-family: "Open Sans";
+  font-family: "Quicksand", sans-serif;
+  scroll-behavior: smooth;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
@@ -120,7 +139,8 @@ h3 {
 }
 
 button, input {
-  font-family: "Open Sans";
+  font-family: "Quicksand", sans-serif;
+  scroll-behavior: smooth;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -129,7 +149,8 @@ button, input {
 }
 
 *::placeholder, p {
-  font-family: "Open Sans";
+  font-family: "Quicksand", sans-serif;
+  scroll-behavior: smooth;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -154,20 +175,49 @@ button, input {
     letter-spacing: 0.005em;
   }
 }
+.primary_btn {
+  background: #171F38 !important;
+  padding: 7px 20px !important;
+  border: 1px solid #01D293 !important;
+}
+
+.primary_btn a {
+  text-decoration: none;
+  color: #01D293;
+  background: transparent !important;
+}
+
+.secondary_btn {
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 7px 25px;
+}
+
+.secondary_btn a {
+  color: #01D293 !important;
+}
+
+.primary_btn a:hover,
+.secondary_btn a:hover {
+  color: unset;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 a {
-  color: inherit;
+  color: unset;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+  background: #0E1630;
 }
 
 /*# sourceMappingURL=Main.css.map */
