--- a/styles/sass/base/_container.scss
+++ b/styles/sass/base/_container.scss
@@ -2,3 +2,13 @@
     max-width: 1200px;
     width: 100%;
 }
+
+section {
+    padding-top: 150px;
+}
+
+footer {
+    padding-bottom: 20px;
+    padding-top: 60px;
+    border-top: 1px solid #171f38;
+}
