--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+    color: #FFFFFF;
+}
+
 h1 {
-    font-family: "Open Sans";
+    font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
@@ -8,16 +15,18 @@ h1 {
 }
 
 h2 {
-    font-family: "Open Sans";
+    font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
     font-style: normal;
     font-weight: 600;
-    font-size: 36px;
+    font-size: 2.5rem;
     line-height: 54px;
     letter-spacing: 0.005em;
 }
 
 h3 {
-    font-family: "Open Sans";
+    font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -26,7 +35,8 @@ h3 {
 }
 
 .Subtitle {
-    font-family: "Open Sans";
+    font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -35,7 +45,8 @@ h3 {
 }
 
 button, input {
-    font-family: "Open Sans";
+    font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -44,7 +55,8 @@ button, input {
 }
 
 *::placeholder, p {
-    font-family: "Open Sans";
+    font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
